move dmdrawer out of view instead of setting display:none; (fixes #137)

--- a/twitter.gt2eb.style.scss
+++ b/twitter.gt2eb.style.scss
@@ -749,19 +749,17 @@ body:not(.gt2-opt-sticky-sidebars) {
 
 .gt2-opt-hide-message-box {
   div[data-testid=DMDrawer] {
-    display: none;
+    bottom: -1000px;
   }
 }
 
 
-/*
-.gt2-opt-keep-tweets-in-tl {
-  div[data-testid=primaryColumn] > div > div:nth-child(4) > div > div > section > div:nth-child(2) > div > div {
-    padding-top: 0 !important;
-    padding-bottom: 0 !important;
-  }
-}*/
-
+// .gt2-opt-keep-tweets-in-tl {
+//   div[data-testid=primaryColumn] > div > div:nth-child(4) > div > div > section > div:nth-child(2) > div > div {
+//     padding-top: 0 !important;
+//     padding-bottom: 0 !important;
+//   }
+// }
 
 .gt2-hide-spark-opt {
   #react-root div[data-at-shortcut-keys] > div:nth-child(2) > div > div:nth-child(2) > div:nth-child(3) > div > div > div {
